# lang

./: README  common.mk
X11/: Rakefile  app_glob.c  dispdesc.c  drawline.c  onsen  owm.c  visual.c  xbutton.c  xcolorbars.c  xetude.c  xetude2.c  xeyecatch.c  xflipflop.c  xflipflop2.c  xfont.c  xhello.c  xhist.c  xputboxes.c  xsimple.c  xtest.c  xwins.h
c/: Makefile  Rakefile  bignum.c  bignumcheck.rb  complexTest.c  conf.c  cvsimple.c  doublefork.c  exitstatus.c  fcntl.c  fileno.c  fread.c  frexp.c  fwrite.c  gethost.c  loop.c  memory_map.c  mychmod.c  myls.c  mysh.c  pthread_cancel.c  pthread_cond_test.c  race_condition.c  raceconditioned.c  recursion.c  simple_processes.c  simple_threads.c  stat.c  strtoken.c  sum.c  test_pthread_priority_scheduling.c  thread_test.c  vfork.c
c++/: BubbleSort.cpp  ChainTest.cpp  ConversionTest.cpp  Factorial.cpp  FunctorTest.cpp  Rakefile  SingletonTest.cpp  SmallObjAllocatorTest.cpp  Timer.hpp  TupleTest.cpp  TypelistTest.cpp  algorithmTest.cpp  auto_ptrTest.cpp  changed_pointer.cpp  const.cpp  copyTest.cpp  dexpr.cpp  dvec.cpp  dvec.h  fizzbuzz.cpp  fizzbuzz2.cpp  functions.cpp  hash_mapTest.cpp  innerclass.cpp  innerclass2.cpp  it++mat.cpp  it++matinput.cpp  itpp_prod.cpp  kdl.cpp  list.cpp  memsetBench.cpp  mynew.cpp  nesttemplate.cpp  newhandler.cpp  notclosure.cpp  operator_equal_and_copyTest.cpp  opt_check.cpp  program_optionsTest.cpp  repnew.cpp  sizeofTest.cpp  (+10 more)
c/procs/: .gitignore  Makefile.am  config.h.in~  configure.ac  configure.scan  procs.c
cobol/: hello.cob
converge/: Rakefile  hello.cv  world.cv
d/: wc.d
(+1097 files in other folders)
